# fractals-tui

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  autopilot.rs  main.rs  viewport.rs
src/fractal/: burning_ship.rs  julia.rs  mandelbrot.rs  mod.rs  tricorn.rs
src/render/: braille.rs  color.rs  mod.rs  widget.rs
