[package]
name = "fractals-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal fractal explorer with braille sub-pixel rendering"
license = "MIT"
repository = "https://github.com/ofcRS/fractals-tui"
keywords = ["fractal", "tui", "mandelbrot", "terminal", "braille"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rayon = "1.10"
